--- a/package.json
+++ b/package.json
@@ -28,5 +28,6 @@
     "dev": "tsc && node lib/index.js",
     "build": "tsc",
     "lint": "tslint -c tslint.json src/**/*.ts"
+    "build": "[my-framework] build --output public"
   }
 }
